<resources>
    <string name="app_name">DiAI </string>
    <string-array name="diabetes_types">
        <item>Type 1</item>
        <item>Type 2</item>
    </string-array>

    <!-- Mảng cân nặng -->
    <string-array name="weight_array">
        <item>50kg</item>
        <item>55kg</item>
        <item>60kg</item>
        <item>65kg</item>
        <item>70kg</item>
        <item>75kg</item>
        <item>80kg</item>
        <item>85kg</item>
        <item>90kg</item>
    </string-array>
    <string-array name="sex_options">
        <item>Nữ</item>
        <item>Nam</item>
    </string-array>

    <!-- Mảng mục tiêu -->
    <string-array name="goal_array">
        <item>Giảm cân</item>
        <item>Duy trì cân nặng</item>
        <item>Tăng cường sức khỏe</item>
        <item>Phục hồi sức khỏe</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Xóa hoặc thay đổi văn bản giữ chỗ này -->
    <string name="hello_blank_fragment">Xin chào, fragment trống</string>
    <string name="username">Tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="nh_p_th_ng_tin_c_nh_n">Nhập thông tin cá nhân</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="back">Quay lại</string>
    <string name="additional_info">Thông tin bổ sung</string>
    <string name="next">Tiếp theo</string>
    <string name="choosegoal">Chọn mục tiêu</string>
    <string name="start">Bắt đầu</string>
    <string name="enter_your_personal_information">Nhập thông tin cá nhân của bạn</string>
    <string name="edit_account">Chỉnh sửa tài khoản</string>
    <string name="meal_detail">Chi tiết bữa ăn</string>

</resources>