<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <!-- Nút Back (ImageView) -->
        <ImageView
            android:id="@+id/btnBack3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/back"
            android:padding="8dp"
            android:src="@drawable/ic_navigation_back_arrow" />

        <!-- Tiêu đề -->
        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingEnd="40dp"
            android:text="@string/create_account"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- Tiêu đề màn hình -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/enter_your_personal_information"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Spinner chọn loại tiểu đường -->
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Diabetes Type"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinnerDiabetesType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="12dp" />

    <!-- Checkbox lịch sử gia đình -->
    <CheckBox
        android:id="@+id/checkFamilyHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Family History of Diabetes"
        android:textSize="16sp" />

    <!-- Spinner chọn thêm thông tin -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Goal"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinnerAdditionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="12dp" />

    <!-- Nút Start -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:padding="12dp"
        android:text="@string/start"
        android:textColor="@android:color/white" />
</LinearLayout>
